--- a/config/crd/bases/openslo.cloud-native.ml_sloes.yaml
+++ b/config/crd/bases/openslo.cloud-native.ml_sloes.yaml
@@ -5,20 +5,20 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
   creationTimestamp: null
-  name: agentsubscriptions.monitoring.cloud-native.ml
+  name: sloes.openslo.cloud-native.ml
 spec:
-  group: monitoring.cloud-native.ml
+  group: openslo.cloud-native.ml
   names:
-    kind: AgentSubscription
-    listKind: AgentSubscriptionList
-    plural: agentsubscriptions
-    singular: agentsubscription
+    kind: SLO
+    listKind: SLOList
+    plural: sloes
+    singular: slo
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: AgentSubscription is the Schema for the agentsubscriptions API
+        description: SLO is the Schema for the sloes API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -33,17 +33,15 @@ spec:
           metadata:
             type: object
           spec:
-            description: AgentSubscriptionSpec defines the desired state of AgentSubscription
+            description: SLOSpec defines the desired state of SLO
             properties:
-              description:
-                description: Description is description field of AgentSubscription
-                type: string
-              openSLOService:
-                description: SLO service target
+              foo:
+                description: Foo is an example field of SLO. Edit slo_types.go to
+                  remove/update
                 type: string
             type: object
           status:
-            description: AgentSubscriptionStatus defines the observed state of AgentSubscription
+            description: SLOStatus defines the observed state of SLO
             type: object
         type: object
     served: true
