--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,17 +2,23 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/monitoring.cloud-native.ml_agentsubscriptions.yaml
+- bases/openslo.cloud-native.ml_sli.yaml
+- bases/openslo.cloud-native.ml_sloes.yaml
+- bases/napa.cloud-native.ml_agentsubscriptions.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
+#- patches/webhook_in_sli.yaml
+#- patches/webhook_in_sloes.yaml
 #- patches/webhook_in_agentsubscriptions.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
+#- patches/cainjection_in_sli.yaml
+#- patches/cainjection_in_sloes.yaml
 #- patches/cainjection_in_agentsubscriptions.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
