--- a/config/crd/patches/webhook_in_openslo_sli.yaml
+++ b/config/crd/patches/webhook_in_openslo_sli.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: agentsubscriptions.monitoring.cloud-native.ml
+  name: sli.openslo.cloud-native.ml
 spec:
   conversion:
     strategy: Webhook
