--- a/config/rbac/openslo_sli_editor_role.yaml
+++ b/config/rbac/openslo_sli_editor_role.yaml
@@ -1,20 +1,20 @@
-# permissions for end users to edit agentsubscriptions.
+# permissions for end users to edit sli.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: agentsubscription-editor-role
+    app.kubernetes.io/instance: sli-editor-role
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: napa-operator
     app.kubernetes.io/part-of: napa-operator
     app.kubernetes.io/managed-by: kustomize
-  name: agentsubscription-editor-role
+  name: sli-editor-role
 rules:
 - apiGroups:
-  - monitoring.cloud-native.ml
+  - openslo.cloud-native.ml
   resources:
-  - agentsubscriptions
+  - sli
   verbs:
   - create
   - delete
@@ -24,8 +24,8 @@ rules:
   - update
   - watch
 - apiGroups:
-  - monitoring.cloud-native.ml
+  - openslo.cloud-native.ml
   resources:
-  - agentsubscriptions/status
+  - sli/status
   verbs:
   - get
