--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -6,7 +6,7 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
-  - monitoring.cloud-native.ml
+  - napa.cloud-native.ml
   resources:
   - agentsubscriptions
   verbs:
@@ -18,15 +18,67 @@ rules:
   - update
   - watch
 - apiGroups:
-  - monitoring.cloud-native.ml
+  - napa.cloud-native.ml
   resources:
   - agentsubscriptions/finalizers
   verbs:
   - update
 - apiGroups:
-  - monitoring.cloud-native.ml
+  - napa.cloud-native.ml
   resources:
   - agentsubscriptions/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - openslo.cloud-native.ml
+  resources:
+  - sli
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - openslo.cloud-native.ml
+  resources:
+  - sli/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - openslo.cloud-native.ml
+  resources:
+  - sli/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - openslo.cloud-native.ml
+  resources:
+  - sloes
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - openslo.cloud-native.ml
+  resources:
+  - sloes/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - openslo.cloud-native.ml
+  resources:
+  - sloes/status
   verbs:
   - get
   - patch
