--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,6 @@
 ## Append samples you want in your CSV to this file as resources ##
 resources:
-- monitoring_v1alpha1_agentsubscription.yaml
+- openslo_v1alpha1_sli.yaml
+- openslo_v1alpha1_slo.yaml
+- napa_v1alpha1_agentsubscription.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
