--- a/config/crd/bases/openslo.cloud-native.ml_sloes.yaml
+++ b/config/crd/bases/openslo.cloud-native.ml_sloes.yaml
@@ -35,10 +35,176 @@ spec:
           spec:
             description: SLOSpec defines the desired state of SLO
             properties:
-              foo:
-                description: Foo is an example field of SLO. Edit slo_types.go to
-                  remove/update
+              alertPolicies:
+                description: We don't make clear in the spec if this is a ref or inline.
+                  We will make it a ref for now. https://github.com/OpenSLO/OpenSLO/issues/133
+                items:
+                  type: string
+                type: array
+              budgetingMethod:
                 type: string
+              description:
+                type: string
+              indicator:
+                properties:
+                  metadata:
+                    type: object
+                  spec:
+                    description: SLISpec defines the desired state of SLI
+                    properties:
+                      ratioMetric:
+                        description: RatioMetric represents the ratio metric.
+                        properties:
+                          bad:
+                            description: MetricSourceHolder represents the metric
+                              source holder.
+                            properties:
+                              metricSource:
+                                description: MetricSource represents the metric source.
+                                properties:
+                                  metricSourceRef:
+                                    type: string
+                                  spec:
+                                    additionalProperties:
+                                      type: string
+                                    type: object
+                                  type:
+                                    type: string
+                                required:
+                                - spec
+                                type: object
+                            required:
+                            - metricSource
+                            type: object
+                          counter:
+                            type: boolean
+                          good:
+                            description: MetricSourceHolder represents the metric
+                              source holder.
+                            properties:
+                              metricSource:
+                                description: MetricSource represents the metric source.
+                                properties:
+                                  metricSourceRef:
+                                    type: string
+                                  spec:
+                                    additionalProperties:
+                                      type: string
+                                    type: object
+                                  type:
+                                    type: string
+                                required:
+                                - spec
+                                type: object
+                            required:
+                            - metricSource
+                            type: object
+                          total:
+                            description: MetricSourceHolder represents the metric
+                              source holder.
+                            properties:
+                              metricSource:
+                                description: MetricSource represents the metric source.
+                                properties:
+                                  metricSourceRef:
+                                    type: string
+                                  spec:
+                                    additionalProperties:
+                                      type: string
+                                    type: object
+                                  type:
+                                    type: string
+                                required:
+                                - spec
+                                type: object
+                            required:
+                            - metricSource
+                            type: object
+                        required:
+                        - counter
+                        - total
+                        type: object
+                      thresholdMetric:
+                        description: MetricSourceHolder represents the metric source
+                          holder.
+                        properties:
+                          metricSource:
+                            description: MetricSource represents the metric source.
+                            properties:
+                              metricSourceRef:
+                                type: string
+                              spec:
+                                additionalProperties:
+                                  type: string
+                                type: object
+                              type:
+                                type: string
+                            required:
+                            - spec
+                            type: object
+                        required:
+                        - metricSource
+                        type: object
+                    type: object
+                required:
+                - metadata
+                - spec
+                type: object
+              indicatorRef:
+                type: string
+              objectives:
+                items:
+                  description: Objective represents single threshold for SLO, for
+                    internal usage.
+                  properties:
+                    displayName:
+                      type: string
+                    op:
+                      type: string
+                    target:
+                      type: string
+                    timeSliceTarget:
+                      type: string
+                    timeSliceWindow:
+                      type: string
+                    value:
+                      type: string
+                  required:
+                  - target
+                  type: object
+                type: array
+              service:
+                type: string
+              timeWindow:
+                items:
+                  description: TimeWindow represents content of time window.
+                  properties:
+                    calendar:
+                      description: Calendar struct represents calendar time window.
+                      properties:
+                        startTime:
+                          type: string
+                        timeZone:
+                          type: string
+                      required:
+                      - startTime
+                      - timeZone
+                      type: object
+                    duration:
+                      type: string
+                    isRolling:
+                      type: boolean
+                  required:
+                  - duration
+                  - isRolling
+                  type: object
+                type: array
+            required:
+            - alertPolicies
+            - budgetingMethod
+            - objectives
+            - service
+            - timeWindow
             type: object
           status:
             description: SLOStatus defines the observed state of SLO
