--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -34,7 +34,7 @@ rules:
 - apiGroups:
   - openslo.cloud-native.ml
   resources:
-  - slis
+  - sli
   verbs:
   - create
   - delete
@@ -46,13 +46,13 @@ rules:
 - apiGroups:
   - openslo.cloud-native.ml
   resources:
-  - slis/finalizers
+  - sli/finalizers
   verbs:
   - update
 - apiGroups:
   - openslo.cloud-native.ml
   resources:
-  - slis/status
+  - sli/status
   verbs:
   - get
   - patch
@@ -60,7 +60,7 @@ rules:
 - apiGroups:
   - openslo.cloud-native.ml
   resources:
-  - slos
+  - sloes
   verbs:
   - create
   - delete
@@ -72,13 +72,13 @@ rules:
 - apiGroups:
   - openslo.cloud-native.ml
   resources:
-  - slos/finalizers
+  - sloes/finalizers
   verbs:
   - update
 - apiGroups:
   - openslo.cloud-native.ml
   resources:
-  - slos/status
+  - sloes/status
   verbs:
   - get
   - patch
