--- a/config/samples/napa_v1alpha1_agent.yaml
+++ b/config/samples/napa_v1alpha1_agent.yaml
@@ -9,4 +9,4 @@ metadata:
     app.kubernetes.io/created-by: napa-operator
   name: agent-sample
 spec:
-  # TODO(user): Add fields here
+  openSLOService: test
