--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - bases/napa.cloud-native.ml_agents.yaml
 - bases/openslo.cloud-native.ml_sloes.yaml
 - bases/openslo.cloud-native.ml_sli.yaml
+- bases/openslo.cloud-native.ml_services.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -13,6 +14,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_agents.yaml
 #- patches/webhook_in_slos.yaml
 #- patches/webhook_in_slis.yaml
+#- patches/webhook_in_services.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -20,6 +22,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_agents.yaml
 #- patches/cainjection_in_slos.yaml
 #- patches/cainjection_in_slis.yaml
+#- patches/cainjection_in_services.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
