--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -61,6 +61,32 @@ rules:
 - apiGroups:
   - openslo.cloud-native.ml
   resources:
+  - services
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - openslo.cloud-native.ml
+  resources:
+  - services/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - openslo.cloud-native.ml
+  resources:
+  - services/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - openslo.cloud-native.ml
+  resources:
   - sli
   verbs:
   - create
