add openslo svc/service cr samples

--- a/config/samples/openslo_v1alpha1_service.yaml
+++ b/config/samples/openslo_v1alpha1_service.yaml
@@ -9,4 +9,4 @@ metadata:
     app.kubernetes.io/created-by: napa-operator
   name: service-sample
 spec:
-  description: string # optional up to 1050 characters
+  description: sample openslo svc
